samples/_failures_safe/1761617057_8c6cce_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_489c1c8d.c: In function ‘main’:
./samples/SAFE/__tmp_489c1c8d.c:144: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_489c1c8d.c:143:5: error: expected declaration or statement at end of input
  143 |     for
      |     ^~~
